- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.9.6, 5.11.1
- 
    None
1. Launch the attached compositor
2. Launch an egl client (not animated), such as a regular qml scene
3. Click the create waylandquickitem thrice
4. Delete two of the items by clicking the x above them
Expected result: 1 wayland quick item should remain with contents intact
Actual results: Only a black surface remains