Compositor: Fix OpenGL textures deleted prematurely

[ChangeLog][Compositor] Fixed a bug where destroying a WaylandQuickItem would
delete the OpenGL texture for all other WaylandQuickItems using that surface.

The texture QWaylandBufferRef::toOpenGLTexture returns is owned by the buffer
(documented public API), so setting QQuickWindow::TextureOwnsGLTexture in
QWaylandTextureProvider is wrong.

Task-number: QTBUG-70163
Change-Id: I831f2aa81ed20c08d4d87bccac33650ab86d19c8
Reviewed-by: Paul Olav Tvete <paul.tvete@qt.io>